update for merchants
